@startuml


Empresa o-- Venta
Empresa *-- Inventario
Inventario o-- Producto
Inventario -- Venta

class Empresa{
    -ArrayList <Venta> ventas
    +Empresa()
    +agregarVenta()
    +buscarVenta()
    +eliminarVenta()
    +modificarVenta()
}
class Venta{
    -integer idVenta
    -Inventario productos
    +Venta()
    +agregarProducto()
}
class Producto{
    -integer idProducto
    -String nombreProducto
    -integer cantidadProducto
    +Producto()
    +setIdProducto()
    +getIdProducto()
    +setNombreProducto()
    +getNombreProducto()
    +setCantidadProducto()
    +getCantidadProducto()
}
class Inventario{
    -ArrayList <Producto> producto
    -Venta venta
    +Inventario()
    +agregarProducto()
    +eliminarProducto()
    +buscarProducto()
    +modificarCantidadProducto()
}



@enduml